--- a/QuanLyThongTinUngVien/QuanLyThongTinUngVien.csproj
+++ b/QuanLyThongTinUngVien/QuanLyThongTinUngVien.csproj
@@ -39,6 +39,10 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Office.Interop.Excel.15.0.4795.1001\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -67,10 +71,10 @@
     <Compile Include="FormUngTuyen.Designer.cs">
       <DependentUpon>FormUngTuyen.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\Candidate.cs" />
-    <Compile Include="Models\Job.cs" />
-    <Compile Include="Models\ModelUngTuyen.cs" />
-    <Compile Include="Models\Skill.cs" />
+    <Compile Include="Model\Candidate.cs" />
+    <Compile Include="Model\Job.cs" />
+    <Compile Include="Model\ModelUngTuyen.cs" />
+    <Compile Include="Model\Skill.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormTimUngVien.resx">
